2006-10-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-kantei.el (shimbun-kantei-x-face-alist): Renew.

2006-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-prepare-article): Break long
	lines.

	* shimbun/sb-kantei.el (shimbun-kantei-from-address): Remove.
	(shimbun-kantei-groups): Add m-magazine-ja.koizumi group.
	(shimbun-kantei-x-face-alist): Restore Koizumi's face.
	(shimbun-index-url): Work with m-magazine-ja.koizumi group; make
	m-magazine group an alias to m-magazine-ja.koizumi group.
	(shimbun-from-address): Return a correct author.
	(shimbun-get-headers): Update regexp for English articles; remove
	too match whitespace in Japanese subject.
	(shimbun-clear-contents): Remove <CENTER> tags in English article.

2006-10-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-kantei.el (shimbun-kantei-from-address): Shinzo Abe.
	(shimbun-kantei-groups): Doc fix.
	(shimbun-kantei-x-face-alist): Renew.

2006-10-11  David Hansen  <david.hansen@physik.fu-berlin.de>

	* w3m.el (w3m-relationship-estimate-rules): Support for google code
	search added.

2006-10-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-prepare-article): Remove
	sitesearch area.

2006-10-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el, w3m-bookmarks.el, w3m-search.el: Remove misadded Luca
	Capello from the Authors field.

2006-10-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-compatible-encoding-alist): Add
	iso-8859-8/windows-1255 and iso-8859-9/windows-1254.

	* shimbun/sb-rss.el (shimbun-rss-compatible-encoding-alist): Ditto.

2006-10-06  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-cnet-jp.el (shimbun-clear-contents): Remove anchors
	to print pages.

	* shimbun/sb-opentechpress-jp.el
	(shimbun-opentechpress-jp-content-end): Now covers widen area.

2006-10-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-mail.el (w3m-mail-compose-with-vm): Treat source as binary